# hpm_sdk_extra

./: .gitignore
demos/cangaroo_hpmicro/: CMakeLists.txt  app.yaml
demos/cangaroo_hpmicro/boards/HSCanT/: CMakeLists.txt  HSCanT.yaml  board.c  board.h  pinmux.c  pinmux.h
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/arch/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/boards/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/boards/hpm5300evk/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/components/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/components/debug_console/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/components/dma_mgr/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/components/spi/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/components/usb/device/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/drivers/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/middleware/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/middleware/CMSIS/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/middleware/cherryrb/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/middleware/cherryusb/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/middleware/eclipse_threadx/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/middleware/ptpd/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/middleware/wifi/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/soc/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/soc/HPM5300/HPM5361/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/build_tmp/utils/: cmake_install.cmake
demos/cangaroo_hpmicro/hpm5300evk_flash_xip_debug/iar_embedded_workbench/: hpmicro_cangaroo.custom_argvars  hpmicro_cangaroo.ewp  hpmicro_cangaroo.eww  hpmicro_cangaroo.json
demos/cangaroo_hpmicro/inc/: cdc_acm.h  gs_usb.h  usbd_gs_can.h
demos/cangaroo_hpmicro/protocol/: usb2can.c  usb2can.h
demos/cangaroo_hpmicro/protocol/driver/mcan/: mcan.c  mcan.h
demos/cangaroo_hpmicro/protocol/slcan/inc/: slcan.h
demos/cangaroo_hpmicro/protocol/slcan/src/: slcan.c
demos/cangaroo_hpmicro/src/: cdc_acm.c  main.c  usbd_gs_can.c  winusb10.c
demos/cangaroo_hpmicro/ws2812/: WS2812.c  WS2812.h  WS2812_Conf.h
demos/digital_logic_analyzer_hpm_for_pulseview/: CMakeLists.txt
demos/digital_logic_analyzer_hpm_for_pulseview/inc/: cdc_acm.h  sampling.h  sump.h  usb_config.h
demos/digital_logic_analyzer_hpm_for_pulseview/src/: cdc_acm.c  main.c  sampling.c  sump.c
demos/i2c_master_rtx_dma_chain/: CMakeLists.txt  README.md
demos/i2c_master_rtx_dma_chain/inc/: hpm_i2c_dma_chain.h
demos/i2c_master_rtx_dma_chain/src/: hpm_i2c_dma_chain.c  i2c.c
demos/lvgl_spi_lcd/: CMakeLists.txt  Readme.md
demos/lvgl_spi_lcd/inc/: FreeRTOSConfig.h  lcd_font.h  lv_app_conf.h  lvgl_disp.h  nv3007_display.h  spi_tft_lcd_common.h  st7789_display.h  te_detection.h  usb_config.h
demos/lvgl_spi_lcd/src/: lvgl_disp.c  main.c  nv3007_display.c  spi_tft_lcd_common.c  st7789_display.c  te_detection.c
demos/multi_cdc_acm_vcom/: CMakeLists.txt  README.md  app.yaml
demos/multi_cdc_acm_vcom/src/: cdc_acm.c  cdc_acm.h  main.c  usb_config.h
demos/spi_drive_wizchip_w5xxx/: CmakeLists.txt  README.md
demos/spi_drive_wizchip_w5xxx/ioLibrary_Driver/: CMakeLists.txt
demos/spi_drive_wizchip_w5xxx/ioLibrary_Driver/Ethernet/: CMakeLists.txt  wizchip_conf.c
demos/spi_drive_wizchip_w5xxx/ioLibrary_Driver/Ethernet/W5100/: CMakeLists.txt
demos/spi_drive_wizchip_w5xxx/ioLibrary_Driver/Ethernet/W5100S/: CMakeLists.txt
demos/spi_drive_wizchip_w5xxx/ioLibrary_Driver/Ethernet/W5200/: CMakeLists.txt
demos/spi_drive_wizchip_w5xxx/ioLibrary_Driver/Ethernet/W5300/: CMakeLists.txt
demos/spi_drive_wizchip_w5xxx/ioLibrary_Driver/Ethernet/W5500/: CMakeLists.txt  w5500.c
demos/spi_drive_wizchip_w5xxx/src/: main.c
demos/spi_nor_flash/nor_flash/: CMakeLists.txt
demos/spi_nor_flash/nor_flash_msc/: CMakeLists.txt  app.yaml
demos/spi_slave_dma_chain/: README.md
demos/uart_dma_rtx_stress/: CMakeLists.txt  README.md
demos/uart_dma_rtx_stress/src/: uart_dma_rtx_stress.c
demos/usb_device_rndis_eth_multi/: CMakeLists.txt  README.md
demos/usb_device_rndis_eth_multi/common/single/: netconf.h
demos/usb_device_rndis_eth_multi/inc/: FreeRTOSConfig.h  lwip.h  lwipopts_app.h
demos/usb_device_rndis_eth_multi/ports/freertos/single/: lwipopts.h
demos/usb_device_rndis_eth_multi/ports/freertos/single/arch/: cc.h
demos/usb_device_rndis_eth_multi/rndis_device/: cdc_rndis_lwip.c  cdc_rndis_lwip.h
demos/usb_device_rndis_eth_multi/src/: main.c
demos/usb_display/: README.md
demos/usb_display/hpm_usb_display/: CMakeLists.txt
demos/usb_display/hpm_usb_display/graphic/: usbd_graphic.c  usbd_graphic.h
demos/usb_display/hpm_usb_display/src/: main.c  usb_display.c
demos/usb_host_rndis_eth_multi_net_lwip/: CMakeLists.txt  README.md
demos/usb_host_rndis_eth_multi_net_lwip/inc/: FreeRTOSConfig.h  lwipopts_app.h  ping.h
demos/usb_host_rndis_eth_multi_net_lwip/src/: main.c  ping.c
demos/usb_nic/iperf/: CMakeLists.txt
demos/usb_nic/iperf/linker_file/HPM5E00/gcc/: usb_nic_flash_xip.ld
demos/usb_nic/iperf/linker_file/HPM5E00/segger/: usb_nic_flash_xip.icf
demos/usb_nic/iperf/linker_file/HPM6200/gcc/: usb_nic_flash_xip.ld
demos/usb_nic/iperf/linker_file/HPM6200/segger/: usb_nic_flash_xip.icf
(+21 files in other folders)
